# riglet

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: js-lint.yml  js-test.yml  mypy.yml  pytest.yml  ruff.yml
.state/: OVERVIEW.md  PLAN.md
deployment/docs/: virtual-devices.md
deployment/files/: config.yaml.default  riglet.service
deployment/scripts/: 01-configure.sh
image/: config.ini  packages.txt
image/files/: config.yaml.default  rigctld@.service
server/: auth.py  bandplan.py  config.py  conftest.py  deps.py  devices.py  main.py  modes.py  pyproject.toml  state.py
server/routers/: audio.py  auth.py  cat.py  devices.py  dsp.py  system.py  waterfall.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_bandplan.py  test_cat.py  test_config.py  test_config_v2.py  test_devices.py  test_dsp_api.py  test_dsp_config.py  test_extended_cat.py  test_presets.py  test_security.py  test_simulation.py  test_state.py  test_system.py  test_tuner.py  test_websockets.py
ui/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  bandplan.ts  dsp-persistence.ts  reconnect.ts  stores.ts  theme.ts  types.ts  websocket.ts
ui/src/lib/actions/: scrollwheel.ts
ui/src/lib/audio/: audio-manager.ts  dsp-chain.ts  lufs.ts  nr-worklet.js  pcm-worklet-processor.js  rx-dsp-chain.test.ts  rx-dsp-chain.ts  tx-dsp-chain.test.ts  tx-dsp-chain.ts  vox.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/static/: nr-worklet.js  pcm-worklet-processor.js
(+46 files in other folders)
